...
                fontSize: 10,
                fontWeight: FontWeight.w700,
                height: 1.2,
              ),
            ),
            child: IconButton(
              key: const Key('checkoutButton'),
              onPressed: () => Navigator.of(context).pushNamed("/checkout"),
              icon: const Icon(Icons.shopping_cart),
            ),
          )
        ],
      ),
...
