...
                  ],
                ),
              ),
            // De lo contrario muestra un botón para agregar
            if (product.selected == 0)
              Center(
                key: const Key('add'),
                child: ElevatedButton(
                  onPressed: () {
                    var count = appController.products
                        .where((element) => element.selected == 1);
                    if (count.length >= 3) {
                      if (count.any((element) =>
...
