...
                          fontWeight: FontWeight.w600,
                        ),
                      ),
                    ),
                    Text(
                      "${appController.calculateTotal()}",
                      key: const Key('total'),
                      style: const TextStyle(
                        fontSize: 24,
                        fontWeight: FontWeight.w600,
                      ),
                    ),
                  ],
...
